--- a/webpage/public/index.html
+++ b/webpage/public/index.html
@@ -26,22 +26,22 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>DAF Portfolio</title>
-  <style type="text/css">
+  <!-- <style type="text/css">
     * {
       margin: 0;
       padding: 0;
     }
 
-    /* body {
+    body {
       overflow:visible;
-    } */
+    }
 
-    #vanta {
+    /* #vanta {
       width: 100%;
       height: 100vh;
-      z-index: 1; 
-     } 
-  </style>
+      z-index: 1; */
+    /* } */
+  </style> -->
 </head>
 
 <body>
