got rid of Vanta

--- a/webpage/public/index.html
+++ b/webpage/public/index.html
@@ -27,7 +27,7 @@
     -->
   <title>DAF Portfolio</title>
   <!-- <style type="text/css">
-    * {
+    {
       margin: 0;
       padding: 0;
     }
@@ -46,11 +46,11 @@
 
 <body>
   <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
-  <div id="vanta"> 
+  <!-- <div id="vanta">  -->
     <div id="root"> </div>
-  </div>
+  <!-- </div> -->
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.cells.min.js"></script>
   <script type='text/javascript'>
     VANTA.CELLS ({
@@ -66,7 +66,7 @@
       size: 3.40,
       speed: 0.40
     })
-  </script>
+  </script> -->
 
   <!--
       This HTML file is a template.
